A lot of improvements

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "format:code": "eslint --fix \"./src/**/*.js\"",
     "format:styles": "stylelint  --fix \"./src/**/*.{css,sass,scss}\"",
     "format": "npm run format:code && npm run format:styles",
-    "start": "cross-env NODE_ENV=development webpack-dev-server --progress --config=./webpack.dev.js --display-error-details",
+    "start": "cross-env NODE_ENV=development webpack-dev-server --progress --config=./webpack.dev.js --display-error-details --hot",
+    "watch": "cross-env NODE_ENV=development webpack --watch --progress --config=./webpack.dev.js --display-error-details",
     "build": "cross-env NODE_ENV=production webpack --mode production --config=./webpack.prod.js"
   },
   "keywords": [],
@@ -45,11 +46,7 @@
     "eslint-plugin-vue": "^6.2.1",
     "file-loader": "^5.1.0",
     "html-webpack-plugin": "^3.2.0",
-    "imagemin-gifsicle": "^7.0.0",
-    "imagemin-jpegtran": "^6.0.0",
-    "imagemin-optipng": "^7.1.0",
-    "imagemin-svgo": "^7.1.0",
-    "imagemin-webpack": "^5.1.1",
+    "imagemin-webpack-plugin": "^2.4.2",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.13.1",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
